RESOLVED FIXED290927
[JSC] Fix inverted condition in loop unrolling and clarify intent with shouldFullyUnroll()
https://bugs.webkit.org/show_bug.cgi?id=290927
Summary [JSC] Fix inverted condition in loop unrolling and clarify intent with should...
Yijia Huang
Reported 2025-04-02 10:00:30 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-04-02 10:00:50 PDT
Yijia Huang
Comment 2 2025-04-02 10:09:01 PDT
EWS
Comment 3 2025-04-02 15:24:01 PDT
Committed 293123@main (d6e8264d2a17): <https://commits.webkit.org/293123@main> Reviewed commits have been landed. Closing PR #43470 and removing active labels.
EWS
Comment 4 2025-04-24 08:48:22 PDT
Committed 289651.459@safari-7621-branch (112cacf92f65): <https://commits.webkit.org/289651.459@safari-7621-branch> Reviewed commits have been landed. Closing PR #3034 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.